--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Shohan Morol</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, laboriosam dignissimos. Corrupti, consequuntur eius odit reiciendis perspiciatis, illo officia repellendus asperiores distinctio beatae, rem harum veritatis. Veniam explicabo inventore quae.</p>
+<p>I love coding</p>
 </body>
 </html>
